Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -8,11 +8,11 @@
 
 <body>
   <ol>
-    <li>Cleaners From Venus</li>
-    <li>The Clean</li>
-    <li>Kim Wilde</li>
-    <li>Harold Budd</li>
-    <li>Jean-Michel Jarre</li>
+    <li>Cleaners From Venus - Corridor Of Dreams</li>
+    <li>The Clean - Anything Can Happen</li>
+    <li>Kim Wilde - Cambodia</li>
+    <li>Harold Budd - ?</li>
+    <li>Jean-Michel Jarre - Oxygene</li>
   </ol>
 </body>
 </html>
