Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -7,12 +7,14 @@
 </head>
 
 <body>
-  <ol>
+  <h1>Some of my playlist staples</h1>
+  <p>Songs that generally fit well on any playlist</p>
+  <ul>
     <li>Cleaners From Venus - Corridor Of Dreams</li>
     <li>The Clean - Anything Can Happen</li>
     <li>Kim Wilde - Cambodia</li>
     <li>Harold Budd - ?</li>
     <li>Jean-Michel Jarre - Oxygene</li>
-  </ol>
+  </ul>
 </body>
 </html>
